--- a/public/index.html
+++ b/public/index.html
@@ -190,7 +190,6 @@
 			<table class="tablewidth">
 				<tr>
 					<td>
-						<!-- <input type="button" value="Byt användare"> -->
 						<svg onclick="changeuser();" aria-hidden="true" class="svg" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M497 273L329 441c-15 15-41 4.5-41-17v-96H152c-13.3 0-24-10.7-24-24v-96c0-13.3 10.7-24 24-24h136V88c0-21.4 25.9-32 41-17l168 168c9.3 9.4 9.3 24.6 0 34zM192 436v-40c0-6.6-5.4-12-12-12H96c-17.7 0-32-14.3-32-32V160c0-17.7 14.3-32 32-32h84c6.6 0 12-5.4 12-12V76c0-6.6-5.4-12-12-12H96c-53 0-96 43-96 96v192c0 53 43 96 96 96h84c6.6 0 12-5.4 12-12z"></path></svg>
 					</td>
 					<td class="center head">
@@ -209,7 +208,7 @@
 			<p>Föreslagen tid</p>
 			<input type="time" id="raidtid">
 			<p>Kommentar</p>
-			<textarea id="raidkommentar" onkeydown="checkkey(event, this, 'postbutton', 'click');"></textarea><br/>
+			<textarea id="raidkommentar" onkeydown="checkkey(event, this, 'postraid');"></textarea><br/>
 			<svg onclick="postraid();" class="postbutton fributton" aria-hidden="true" class="svg" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M504 256c0 136.967-111.033 248-248 248S8 392.967 8 256 119.033 8 256 8s248 111.033 248 248zM227.314 387.314l184-184c6.248-6.248 6.248-16.379 0-22.627l-22.627-22.627c-6.248-6.249-16.379-6.249-22.628 0L216 308.118l-70.059-70.059c-6.248-6.248-16.379-6.248-22.628 0l-22.627 22.627c-6.248 6.248-6.248 16.379 0 22.627l104 104c6.249 6.249 16.379 6.249 22.628.001z"></path></svg>
 			<svg onclick="hideaddreaid();" aria-hidden="true" class="fributton" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path fill="currentColor" d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path></svg>
 		</div>
@@ -234,17 +233,17 @@
 	    mpImg.render(resImg, { maxWidth: 300, maxHeight: 535, quality: 0.5 });
 	    document.getElementById('raidtid').focus();
 	};
-	function checkkey(e, element, classname, todo){
+	function checkkey(e, element, todo, id){
 		if (event.which == 13 || event.keyCode == 13) {
-			if(todo == 'click'){
-				element.parentElement.getElementsByClassName(classname)[0].click();
-				event.preventDefault();
-				e.preventDefault();
+			if(todo == 'postraid'){
+				postraid();
 			}else if(todo == 'edit'){
 				element.blur();
-				event.preventDefault();
-				e.preventDefault();
+			}else if(todo == 'kommentsend'){
+				skickakommentar(id);
 			};
+			event.preventDefault();
+			e.preventDefault();
 		};
 	};
 	//Datum funktion.
@@ -471,7 +470,7 @@
 					kommentarwrapper.appendChild(kommentholder);
 					var kommenttextarea = document.createElement('textarea');
 						kommenttextarea.setAttribute('class', 'kommentartextarea');
-						kommenttextarea.setAttribute('onkeydown', 'checkkey(event, this, "kommentsend", "click");');
+						kommenttextarea.setAttribute('onkeydown', 'checkkey(event, this, "kommentsend", "' + id + '");');
 					kommentarwrapper.appendChild(kommenttextarea);
 					var kommentarbr = document.createElement('br');
 					kommentarwrapper.appendChild(kommentarbr);
@@ -604,14 +603,14 @@
 				timeelem.setAttribute('value', time);
 				timeelem.setAttribute('data-admin', admin);
 				timeelem.setAttribute('onblur', textwrapper.getAttribute('onclick'));
-				timeelem.setAttribute('onkeydown', 'checkkey(event, this, false, "edit")');
+				timeelem.setAttribute('onkeydown', 'checkkey(event, this, "edit")');
 			textwrapper.appendChild(timeelem);
 			var textelem = document.createElement('input');
 				textelem.setAttribute('type', 'text');
 				textelem.setAttribute('value', text);
 				textelem.setAttribute('data-admin', admin);
 				textelem.setAttribute('onblur', textwrapper.getAttribute('onclick'));
-				textelem.setAttribute('onkeydown', 'checkkey(event, this, false, "edit")');
+				textelem.setAttribute('onkeydown', 'checkkey(event, this, "edit")');
 			textwrapper.appendChild(textelem);
 			textwrapper.removeAttribute('onclick')
 	};
