--- a/public/index.html
+++ b/public/index.html
@@ -172,6 +172,17 @@
 			align-items: center;
 			justify-content: center;
 		}
+		img.loading {
+			opacity: 0.5;
+		}
+		.wrapperraidimagepreview {
+			background-image: url("img/load.gif");
+			background-repeat: no-repeat;
+			background-position: center;
+			background-size: cover;
+			display: inline-block;
+		}
+		
 	</style>
 </head>
 <body onload="load();">
@@ -215,8 +226,8 @@
 		</div>
 		<div id="addraid" style="display: none;">
 			<p>Skärmdump</p>
-			<input type="file" id="raidimage" onchange="makesmallimg(this.files[0]);"><br/>
-			<div class="center"><img src="img/ingenbild.png" id="raidimagepreview"></div>
+			<input type="file" id="raidimage" onchange="makesmallimg(this.files[0]);imgtotext(this.files[0]);"><br/>
+			<div class="center"><div class="wrapperraidimagepreview"><img src="img/ingenbild.png" id="raidimagepreview"></div></div>
 			<p>Föreslagen tid</p>
 			<input type="time" id="raidtid">
 			<p>Kommentar</p>
@@ -235,9 +246,121 @@
 			<input type="button" id="promptaction" value=""><input type="button" id="promptback" onclick="promptclose();" value="Avbryt">
 		</span>
 	</div>
+	<span onclick="document.getElementById('debug').removeAttribute('style');">Debug</span>
+	<div id="debug" style="display: none;">
+		<canvas id="myCanvas" width="578" height="200" ></canvas>
+		<textarea id="debugcode"></textarea>
+		<input type="button" value="Göm" onclick="document.getElementById('debug').setAttribute('style', 'display: none;');">
+	</div>
 <script src="socket.io/socket.io.js"></script>
 <script src="script/megapix-image.js"></script>
+<script src='https://cdn.rawgit.com/naptha/tesseract.js/1.0.10/dist/tesseract.js'></script>
+<script src="script/gymlund.js" type="text/javascript"></script>
 <script type="text/javascript">
+	var config = {
+		imgdesaturate: 50, //0-255
+		confidence: 80 //0-100
+	}
+	function imgtotext(file){
+		document.getElementById('raidimagepreview').setAttribute('class', 'loading');
+		var reader = new FileReader();
+			reader.readAsDataURL(file);
+			reader.onload = function () {
+				var canvas = document.getElementById('myCanvas');
+				var context = canvas.getContext('2d');
+					context.clearRect(0, 0, canvas.width, canvas.height);
+				var imageObj = new Image();
+
+				imageObj.onload = function() {
+					// draw cropped image
+					var sourceX = 150;
+					var sourceY = 50;
+					var sourceWidth = 500;
+					var sourceHeight = 100;
+					var destWidth = sourceWidth;
+					var destHeight = sourceHeight;
+					var destX = canvas.width / 2 - destWidth / 2;
+					var destY = canvas.height / 2 - destHeight / 2;
+
+					context.drawImage(imageObj, sourceX, sourceY, sourceWidth, sourceHeight, destX, destY, destWidth, destHeight);
+
+					var imageData = context.getImageData(0, 0, imageObj.width, imageObj.height);
+			        var data = imageData.data;
+
+			        var newColor = {r:255,g:255,b:255, a:255};
+			        for(var i = 0; i < data.length; i += 4) {
+			          // red
+			          data[i] = 255 - data[i];
+			          // green
+			          data[i + 1] = 255 - data[i + 1];
+			          // blue
+			          data[i + 2] = 255 - data[i + 2];
+			        }
+					for (var i = 0, n = data.length; i <n; i += 4) {
+					    var r = data[i],
+					            g = data[i+1],
+					            b = data[i+2];
+
+					        if(r <= config.imgdesaturate && g <= config.imgdesaturate && b <= config.imgdesaturate){ 
+					        }else{
+					            data[i] = newColor.r;
+					            data[i+1] = newColor.g;
+					            data[i+2] = newColor.b;
+					            data[i+3] = newColor.a;
+					        };
+					}
+			        // overwrite original image
+			        context.putImageData(imageData, 0, 0);
+			        canvasToImg();
+				};
+				imageObj.src = reader.result;
+			};
+			reader.onerror = function (error) {
+				console.log('Error: ', error);
+			};
+	};
+	console.log(gyms);
+	function canvasToImg() {
+		var canvas = document.getElementById("myCanvas");
+		var ctx=canvas.getContext("2d");
+		var url = canvas.toDataURL();
+		Tesseract.recognize(url, {
+		    lang: 'swe'
+		})
+		.then(function(result){
+			//console.log(result)
+			var excludegyms = gyms;
+			console.log(result.text)
+			for (var i = result.words.length - 1; i >= 0; i--) {
+				console.log(result.words[i].confidence);
+				if(result.words[i].confidence >= config.confidence){
+					var possible = [];
+					for (var a = excludegyms.length - 1; a >= 0; a--) {
+						var check = excludegyms[a].namn.toLowerCase().includes(result.words[i].text.toLowerCase());
+						if(check){
+							possible.push(excludegyms[a]);
+						};
+					}
+					var excludegyms = possible;
+				}
+			}
+			if(excludegyms.length == 1){
+				var postbutton = document.getElementsByClassName('postbutton ')[0];
+					postbutton.setAttribute('data-exraid', excludegyms[0].exraid);
+					postbutton.setAttribute('data-latitud', excludegyms[0].location.latitud);
+					postbutton.setAttribute('data-longitud', excludegyms[0].location.longitud);
+			};
+			/*Debugg*/
+			console.log(excludegyms);
+			var debugtext = [];
+			for (var i = excludegyms.length - 1; i >= 0; i--) {
+				debugtext.push(excludegyms[i].namn)
+			}
+			document.getElementById('debugcode').value = excludegyms.length + ' st = ' + debugtext.join(', ');
+			document.getElementById('raidimagepreview').removeAttribute('class');
+			/*Debugg slut*/
+		})
+    };
 	function promptopen(message, inputtodo, func, active, back, data){
 		if(inputtodo == 'false'){}else{
 			var inputwrapper = document.getElementById('wrapperpromptinput');
@@ -328,7 +451,11 @@
 		document.getElementById('addraid').setAttribute('style', 'display: none;');
 	};
 	function postraid(){
-		socket.emit('postraid', {raidimage: document.getElementById('raidimagepreview').src, raidtid: document.getElementById('raidtid').value, raidkommentar: document.getElementById('raidkommentar').value});
+		var exraid = 'false';
+		if(!document.getElementsByClassName('postbutton')[0].getAttribute('data-exraid')){}else{
+			var exraid = document.getElementsByClassName('postbutton')[0].getAttribute('data-exraid')
+		};
+		socket.emit('postraid', {"raidimage": document.getElementById('raidimagepreview').src, "raidtid": document.getElementById('raidtid').value, raidkommentar: document.getElementById('raidkommentar').value, "exraid": exraid});
 		hideaddreaid(document.getElementById('buttonlaggtillraid'));
 	};
 	function changeuser(){
@@ -371,7 +498,7 @@
 		        	addnopost();
 		        }else{
 					for (var i = data.raiddata.length - 1; i >= 0; i--) {
-						addpost(data.raiddata[i].username, data.raiddata[i].team, data.raiddata[i].raidtid, data.raiddata[i].raidkommentar, data.raiddata[i].raidimage, data.raiddata[i].kommer, data.raiddata[i].kommentar, data.raiddata[i].id, 'false');
+						addpost(data.raiddata[i].username, data.raiddata[i].team, data.raiddata[i].raidtid, data.raiddata[i].raidkommentar, data.raiddata[i].raidimage, data.raiddata[i].kommer, data.raiddata[i].kommentar, data.raiddata[i].id, 'false', data.raiddata[i].exraid);
 					};
 				};
 		    }
@@ -405,9 +532,9 @@
 		if(!wrapper){}else{
 			wrapper.parentElement.removeChild(wrapper);
 		};
-		addpost(data.username, data.team, data.raidtid, data.raidkommentar, data.raidimage, data.kommer, data.kommentar, data.id, 'true');
+		addpost(data.username, data.team, data.raidtid, data.raidkommentar, data.raidimage, data.kommer, data.kommentar, data.id, 'true', data.exraid);
 	});
-	function addpost(username, team, raidtid, raidkommentar, raidimage, kommernummer, kommentarer, id, firstorlast){
+	function addpost(username, team, raidtid, raidkommentar, raidimage, kommernummer, kommentarer, id, firstorlast, exraid){
 		var wrapper = document.getElementById('posts');
 			var body = document.createElement('span');
 				body.setAttribute('class', 'postbody');
@@ -449,6 +576,11 @@
 					var img = document.createElement('img');
 						img.setAttribute('src', raidimage);
 						img.setAttribute('class', 'raidimage');
+						if(!exraid){}else{
+							if(exraid == 'true'){
+								img.setAttribute('style', 'border: solid 2px red;');
+							};
+						};
 					imgwrapp.appendChild(img);
 				body.appendChild(imgwrapp);
 				var tableextra = document.createElement('table');
