--- a/public/index.html
+++ b/public/index.html
@@ -123,6 +123,7 @@
 			width: 100%;
 			max-width: 100%;
 			height: 40px;
+			z-index: 4;
 		}
 		#wrapper {
 			padding-top: 40px;
@@ -161,7 +162,6 @@
 			padding-left: 0px;
 		}
 		#prompt {
-			background-color: white;
 			position: fixed;
 			top: 0px;
 			right: 0px;
@@ -171,6 +171,21 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
+		}
+		#promptbg {
+			position: fixed;
+			top: 0px;
+			right: 0px;
+			bottom: 0px;
+			left: 0px;
+			background-color: black;
+			opacity: 0.5;
+			z-index: 998;
+		}
+		#content {
+			background-color: white;
+			padding: 10px;
+			border: solid 2px black;
 		}
 		img.loading {
 			opacity: 0.5;
@@ -182,7 +197,28 @@
 			background-size: cover;
 			display: inline-block;
 		}
-		
+		/*.exraid {
+			border: solid 2px red;
+		}*/
+		.raidimagewrapp {
+			position: relative;
+			top: 0;
+			left: 0;
+		}
+		.raidimage {
+			position: relative;
+			top: 0;
+			left: 0;
+			z-index: 2;
+		}
+		.exraid {
+			position: absolute;
+			top: -85px;
+			right: 5px;
+			z-index: 3;
+			height: 120px;
+			width: 120px;
+		}
 	</style>
 </head>
 <body onload="load();">
@@ -239,6 +275,7 @@
 			
 		</div>
 	</div>
+	<div id="promptbg" style="display: none;"></div>
 	<div id="prompt" style="display: none;">
 		<span id="content">
 			<p id="prompttext"></p>
@@ -311,7 +348,6 @@
 			input.value = '';
 			document.getElementById('raidimagepreview').setAttribute('src', 'img/ingenbild.png');
 	};
-	console.log(gyms);
 	function canvasToImg() {
 		var canvas = document.getElementById("myCanvas");
 		var ctx=canvas.getContext("2d");
@@ -394,12 +430,14 @@
 			actionbutton.setAttribute('data-info', data);
 		document.getElementById('promptback').value = back;
 		document.getElementById('prompt').removeAttribute('style');
+		document.getElementById('promptbg').removeAttribute('style');
 		if(inputtodo == 'false'){}else{
 			document.getElementById('promptinput').focus();
 		};
 	};
 	function promptclose(){
 		document.getElementById('prompt').setAttribute('style', 'display: none;');
+		document.getElementById('promptbg').setAttribute('style', 'display: none;');
 		removechilds(document.getElementById('prompttext'));
 		removechilds(document.getElementById('wrapperpromptinput'));
 		var actionbutton = document.getElementById('promptaction');
@@ -465,11 +503,16 @@
 		document.getElementById('addraid').setAttribute('style', 'display: none;');
 	};
 	function postraid(){
+		var postbutton = document.getElementsByClassName('postbutton')[0];
 		var exraid = 'false';
-		if(!document.getElementsByClassName('postbutton')[0].getAttribute('data-exraid')){}else{
-			var exraid = document.getElementsByClassName('postbutton')[0].getAttribute('data-exraid')
+		if(!postbutton.getAttribute('data-exraid')){}else{
+			var exraid = postbutton.getAttribute('data-exraid');
 		};
-		socket.emit('postraid', {"raidimage": document.getElementById('raidimagepreview').src, "raidtid": document.getElementById('raidtid').value, raidkommentar: document.getElementById('raidkommentar').value, "exraid": exraid});
+		var location = 'false';
+		if(!postbutton.getAttribute('data-longitud') && postbutton.getAttribute('data-latitud')){}else{
+			var location = {"longitud": postbutton.getAttribute('data-longitud'), "latitud": postbutton.getAttribute('data-latitud')};
+		};
+		socket.emit('postraid', {"raidimage": document.getElementById('raidimagepreview').src, "raidtid": document.getElementById('raidtid').value, raidkommentar: document.getElementById('raidkommentar').value, "exraid": exraid, "location": location});
 		hideaddreaid(document.getElementById('buttonlaggtillraid'));
 	};
 	function changeuser(){
@@ -512,7 +555,7 @@
 		        	addnopost();
 		        }else{
 					for (var i = data.raiddata.length - 1; i >= 0; i--) {
-						addpost(data.raiddata[i].username, data.raiddata[i].team, data.raiddata[i].raidtid, data.raiddata[i].raidkommentar, data.raiddata[i].raidimage, data.raiddata[i].kommer, data.raiddata[i].kommentar, data.raiddata[i].id, 'false', data.raiddata[i].exraid);
+						addpost(data.raiddata[i].username, data.raiddata[i].team, data.raiddata[i].raidtid, data.raiddata[i].raidkommentar, data.raiddata[i].raidimage, data.raiddata[i].kommer, data.raiddata[i].kommentar, data.raiddata[i].id, 'false', data.raiddata[i].exraid, data.raiddata[i].location);
 					};
 				};
 		    }
@@ -546,9 +589,9 @@
 		if(!wrapper){}else{
 			wrapper.parentElement.removeChild(wrapper);
 		};
-		addpost(data.username, data.team, data.raidtid, data.raidkommentar, data.raidimage, data.kommer, data.kommentar, data.id, 'true', data.exraid);
+		addpost(data.username, data.team, data.raidtid, data.raidkommentar, data.raidimage, data.kommer, data.kommentar, data.id, 'true', data.exraid, data.location);
 	});
-	function addpost(username, team, raidtid, raidkommentar, raidimage, kommernummer, kommentarer, id, firstorlast, exraid){
+	function addpost(username, team, raidtid, raidkommentar, raidimage, kommernummer, kommentarer, id, firstorlast, exraid, location){
 		var wrapper = document.getElementById('posts');
 			var body = document.createElement('span');
 				body.setAttribute('class', 'postbody');
@@ -564,6 +607,20 @@
 						usertr.appendChild(usertd);
 						var taborttd = document.createElement('td');
 							taborttd.setAttribute('class', 'right');
+							if(location == 'false' || !location){}else{
+								var mapslank = document.createElementNS("http://www.w3.org/2000/svg", 'svg');
+									mapslank.setAttribute('aria-hidden', 'true');
+									mapslank.setAttribute('class', 'svg');
+									mapslank.setAttribute('role', 'img');
+									mapslank.setAttribute('xmlns', 'http://www.w3.org/2000/svg');
+									mapslank.setAttribute('viewBox', '0 0 496 512');
+									mapslank.setAttribute('onclick', 'window.open("http://maps.google.com/?q=' + location.longitud + ',' + location.latitud + '")');
+									var mapslankpath = document.createElementNS("http://www.w3.org/2000/svg", 'path');
+										mapslankpath.setAttribute('fill', 'currentColor');
+										mapslankpath.setAttribute('d', 'M347.94 129.86L203.6 195.83a31.938 31.938 0 0 0-15.77 15.77l-65.97 144.34c-7.61 16.65 9.54 33.81 26.2 26.2l144.34-65.97a31.938 31.938 0 0 0 15.77-15.77l65.97-144.34c7.61-16.66-9.54-33.81-26.2-26.2zm-77.36 148.72c-12.47 12.47-32.69 12.47-45.16 0-12.47-12.47-12.47-32.69 0-45.16 12.47-12.47 32.69-12.47 45.16 0 12.47 12.47 12.47 32.69 0 45.16zM248 8C111.03 8 0 119.03 0 256s111.03 248 248 248 248-111.03 248-248S384.97 8 248 8zm0 448c-110.28 0-200-89.72-200-200S137.72 56 248 56s200 89.72 200 200-89.72 200-200 200z');
+									mapslank.appendChild(mapslankpath);
+								taborttd.appendChild(mapslank);
+							};
 							var tabort = document.createElementNS("http://www.w3.org/2000/svg", 'svg');
 								tabort.setAttribute('aria-hidden', 'true');
 								tabort.setAttribute('class', 'svg');
@@ -587,15 +644,22 @@
 				body.appendChild(kommentar);
 				var imgwrapp = document.createElement('div');
 					imgwrapp.setAttribute('class', 'center');
-					var img = document.createElement('img');
-						img.setAttribute('src', raidimage);
-						img.setAttribute('class', 'raidimage');
+					var imginnerwrapp = document.createElement('span');
+						imginnerwrapp.setAttribute('class', 'raidimagewrapp');
+						var img = document.createElement('img');
+							img.setAttribute('src', raidimage);
+							img.setAttribute('class', 'raidimage');
+						imginnerwrapp.appendChild(img);
 						if(!exraid){}else{
 							if(exraid == 'true'){
-								img.setAttribute('style', 'border: solid 2px red;');
+								//	img.setAttribute('class', 'raidimage exraid');
+								var eximg = document.createElement('img');
+									eximg.setAttribute('src', 'img/ex-raid.png');
+									eximg.setAttribute('class', 'exraid');
+								imginnerwrapp.appendChild(eximg);
 							};
 						};
-					imgwrapp.appendChild(img);
+					imgwrapp.appendChild(imginnerwrapp);
 				body.appendChild(imgwrapp);
 				var tableextra = document.createElement('table');
 					tableextra.setAttribute('class', 'tablewidth');
@@ -626,17 +690,6 @@
 						tabletr.appendChild(spacer);
 						var kommentartd = document.createElement('td');
 							kommentartd.setAttribute('class', 'right invert');
-							//<svg aria-hidden="true" data-prefix="far" data-icon="comments" class="svg-inline--fa fa-comments fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M532 386.2c27.5-27.1 44-61.1 44-98.2 0-80-76.5-146.1-176.2-157.9C368.3 72.5 294.3 32 208 32 93.1 32 0 103.6 0 192c0 37 16.5 71 44 98.2-15.3 30.7-37.3 54.5-37.7 54.9-6.3 6.7-8.1 16.5-4.4 25 3.6 8.5 12 14 21.2 14 53.5 0 96.7-20.2 125.2-38.8 9.2 2.1 18.7 3.7 28.4 4.9C208.1 407.6 281.8 448 368 448c20.8 0 40.8-2.4 59.8-6.8C456.3 459.7 499.4 480 553 480c9.2 0 17.5-5.5 21.2-14 3.6-8.5 1.9-18.3-4.4-25-.4-.3-22.5-24.1-37.8-54.8zm-392.8-92.3L122.1 305c-14.1 9.1-28.5 16.3-43.1 21.4 2.7-4.7 5.4-9.7 8-14.8l15.5-31.1L77.7 256C64.2 242.6 48 220.7 48 192c0-60.7 73.3-112 160-112s160 51.3 160 112-73.3 112-160 112c-16.5 0-33-1.9-49-5.6l-19.8-4.5zM498.3 352l-24.7 24.4 15.5 31.1c2.6 5.1 5.3 10.1 8 14.8-14.6-5.1-29-12.3-43.1-21.4l-17.1-11.1-19.9 4.6c-16 3.7-32.5 5.6-49 5.6-54 0-102.2-20.1-131.3-49.7C338 339.5 416 272.9 416 192c0-3.4-.4-6.7-.7-10C479.7 196.5 528 238.8 528 288c0 28.7-16.2 50.6-29.7 64z"></path></svg>
-							/*var kommentar = document.createElement('input');
-								kommentar.setAttribute('type', 'button');
-								kommentar.setAttribute('class', 'kommentarbutton');
-								kommentar.setAttribute('onclick', 'hideshowkomment("' + id + '");');
-								if(!kommentarer){
-									kommentar.setAttribute('value', 'Kommentar (0)');
-								}else{
-									kommentar.setAttribute('value', 'Kommentar (' + kommentarer.length + ')');
-								};
-							kommentartd.appendChild(kommentar);*/
 							kommentartd.setAttribute('onclick', 'hideshowkomment("' + id + '");');
 							var kommentar = document.createElementNS("http://www.w3.org/2000/svg", 'svg');
 								kommentar.setAttribute('aria-hidden', 'true');
